Do not push pure reference projections in PushProjectionThroughJoinIntoTableScan